# eo_processing

./: .gitignore  AUTHORS.rst  LICENSE.txt  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  weed_python_environment.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/: AOI_tiling_for_jobmanager.ipynb  TD-points_feature_extraction_pipeline_client-based.ipynb  example_SK-TD-points_full-feature_extraction.ipynb  example_TD-points_feature_extraction.ipynb  example_catboost_classification.py  example_catboost_inference_openEO.ipynb  example_catboost_onnx_inference.ipynb  example_dimensionality_reduction.ipynb  example_export_to_stac.ipynb  example_extract_WENR_features.ipynb  example_feature_generation_pipeline_client-based.ipynb  example_inference_mastercube.ipynb  example_multiple_catboost_onnx_inference.ipynb  example_time-series_VIs_features.ipynb  extent_mapping_feature_generation_pipeline.ipynb  google_drive_access.ipynb  retrieve_S1_S2_timeseries_via_openeo.ipynb  retrieve_S2_VI_timeseries_via_openeo.ipynb  retrieve_S2_features_via_openeo.ipynb  storage_access.ipynb  test.nc  test_features_pipeline.ipynb
scripts/: EU_100x100km_LAEA_grid.py  EU_50x50km_LAEA_grid.py  assignment_S2_to_laea_grid.py  catboost_conversion_to_onnx.py  conversion_to_onnx.py  convert_all_catboost_to_onnx.py  generate_map.py  generate_openeo_pg.py  global_20x20km_UTM_tiling-grid.py  high_res_Sentinel2_tiling_grid.py  high_res_openEO_grid.py  laea_tiling_grids_1_create.py  laea_tiling_grids_2_high_res_Sentinel2_tiles.py  (+4 more)
tests/: README.md  (+6 more)
(+175 files in other folders)
