[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eo-processing"
authors= [ {name= "Dr. Marcel Buchhorn", email= "marcel.buchhorn@vito.be"}]
maintainers=[]
description = "EO data processing tools for openEO"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {file="LICENSE.txt"}
dynamic = ["version"]
dependencies = [
    "boto3>=1.36.16",
    "catboost>=1.2.7",
    "fastparquet>=2024.5.0",
    "geojson>=3.1.0",
    "geopandas>=1.0.1",
    "hvac>=2.3.0",
    "matplotlib>=3.9.2",
    "netcdf4>=1.7.1",
    "notebook>=7.2.2",
    "onnx>=1.16.2",
    "onnxruntime>=1.18.1",
    "openeo==0.39.1",
    "pyarrow>=17.0.0",
    "pydrive2>=1.21.1",
    "rasterio>=1.3.11",
    "rioxarray>=0.17.0",
    "scikit-image>=0.24.0",
]

[project.urls]
Homepage = ""
Documentation = ""
Repository = "https://github.com/ESA-WEED-project/eo_processing"

[tool.hatch.version]
path = "src/eo_processing/_version.py"

[tool.uv.sources]
stac-catalog-builder = { git = "https://github.com/VitoTAP/stac-catalog-builder/", branch = "weedstac" }

[project.scripts]
eo-processing = "eo-processing:main"

[project.optional-dependencies]
stac = [
    "stac-catalog-builder",
]
